--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -138,6 +138,65 @@
                 <div class="col-md-9">
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>基础版-县令：</label> ¥15.00 /月付。 
+                                                                                                每月 150G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>进阶版-知府：</label> ¥25.00 /月付。 
+                                                                                                每月 260G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>高阶版-巡抚：</label> ¥35.00 /月付。 
+                                                                                                每月 370G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>专业版-总督：</label> ¥45.00 /月付。 
+                                                                                                每月 480G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://155.248.222.101/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" target="_blank"><b>西游云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -491,16 +550,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-v2ray.htm" title="免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-21-free-v2ray.htm" title="免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-12-free-node-subscribe.htm" title="免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 6月12日22.5M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-subscribe-node.htm" title="免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 5月22日19.9M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-1-node-share-links.htm" title="免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享">免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-24-node-share.htm" title="免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享">免费Clash SSR - 6月24日20.3M/S|免费V2ray/Shadowrocket/SSR/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-2-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月2日20.1M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 6月2日20.1M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-9-free-node-subscribe.htm" title="免费Clash SSR - 6月9日19.4M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月9日19.4M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-27-free-subscribe-node.htm" title="免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 5月27日18.7M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-10-free-high-speed-nodes.htm" title="免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-21-free-v2ray.htm" title="免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月21日20.6M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-1-node-share-links.htm" title="免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享">免费Clash SSR - 6月1日23M/S|免费Shadowrocket/Clash/V2ray/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-11-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月11日21.1M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享">免费Clash SSR - 6月11日21.1M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-8-node-share.htm" title="免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-node-share.htm" title="免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-7-free-high-speed-nodes.htm" title="免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-13-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享">免费Clash SSR - 6月13日19.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -512,10 +571,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
